afegir routes delete a whislist i review
